<resources>
    <string name="app_name">Довідник студентів</string>
    <string name="hello_text">Привіт, студенти</string>
    <string name="studentsList">Список студентів</string>
    <string name="b_showList">Показати список</string>
    <string name="b_showList2">Показати список 2</string>
    <string name="b_sendMsg">Відправити повідомлення</string>
    <string name="b_more">Детальніше</string>
    <string name="t_buttonPressed">Ви натиснули на кнопку!</string>
    <string name="grp_number_txt">Номер групи:</string>
    <string name="faculty_txt">Факультет</string>

    <string name="edu_level_txt">Рівень освіти:</string>
    <string name="edu_level_bachelor_txt">бакалавр</string>
    <string name="edu_level_master_txt">магістр</string>
    <string name="additional_flg_txt">Додаткові відомості:</string>
    <string name="contract_flg_txt">наявність контрактників</string>
    <string name="privilage_flg_txt">наявність пільговиків</string>

    <string name="btn_groups_txt">СТУДЕНТСЬКІ ГРУПИ</string>
    <string name="btn_share">Поділитися</string>
</resources>